fix: fix frawer overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -280,6 +280,7 @@ links-card a:active::before {
   width: 300px;
   height: 100%;
   padding: 16px;
+  overflow-y: auto;
   background-color: var(--md-sys-color-surface);
   border-start-end-radius: 16px;
   border-end-end-radius: 16px;
